# hip-training

./: CMakeLists.txt  Makefile  README.md
hipcl/: CMakeLists.txt
hiplz/: CMakeLists.txt  Makefile
mkl/: README.md
mkl/hiplz/: Makefile  hiplz_mkl_interop.cpp  hiplz_mkl_nobuffer_interop.cpp  onemkl_gemm_wrapper.cpp
mpi/: Makefile
mpi/hipcl/: Makefile
mpi/hiplz/: Makefile  saxpy_hip_mpi.cpp
simple/: CMakeLists.txt  Makefile  saxpy_cuda.cu
simple/chip-spirv/: CMakeLists.txt
simple/hipcl/: CMakeLists.txt  Makefile  saxpy_hip.cpp
simple/hiplz/: CMakeLists.txt  Makefile
